Ajout des différentes parties du programme

--- a/app/src/main/res/layout/activity_show_dest_web_view.xml
+++ b/app/src/main/res/layout/activity_show_dest_web_view.xml
@@ -4,10 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Show_Dest_WebView">
+    tools:context=".ui.activity.Show_Dest_WebView">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/AppBar_Webview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/WebView_Toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/evaneos_green"
+            app:title="Destination Name"
+            app:titleTextColor="@color/white" />
+    </com.google.android.material.appbar.AppBarLayout>
+
     <WebView
         android:id="@+id/destWebview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AppBar_Webview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
