--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="280dp"
@@ -24,55 +23,57 @@
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="8dp"
-            android:layout_marginStart="8dp"
-            android:text="Destination"
-            android:textColor="@color/white"
-            android:textSize="38sp"
-            android:textStyle="bold"
-            card_view:layout_constraintBottom_toBottomOf="@+id/item_image"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintVertical_bias="0.781" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <RatingBar
-            android:id="@+id/item_rating"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/item_title"
-            android:layout_margin="8dp"
-            android:layout_marginStart="8dp"
-            android:isIndicator="true"
-            android:progressTint="@color/rating_colors"
-            android:rating="3"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="@+id/item_title"
-            card_view:layout_constraintVertical_bias="0.728" />
+            <TextView
+                android:id="@+id/item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/avertastd_extrabold"
+                android:text="Destination"
+                android:textColor="@color/white"
+                android:textSize="38sp"
+                android:textStyle="bold"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent"
+                card_view:layout_constraintVertical_bias="0.639" />
 
-        <TextView
-            android:id="@+id/item_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/item_rating"
-            android:layout_margin="8dp"
-            android:textColor="@color/white"
-            android:background="#52565A"
-            android:layout_marginStart="28dp"
-            android:fontFamily="serif"
-            android:text="tag"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="@+id/item_rating"
-            card_view:layout_constraintVertical_bias="0.947" />
+            <com.grdk.ratingbarsvg.RatingBarSvg
+                android:id="@+id/item_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="29dp"
+                android:layout_below="@+id/item_title"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="8dp"
+                android:isIndicator="true"
+                android:progressDrawable="@drawable/custom_ratingbar"
+                android:rating="3"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="@+id/item_title" />
 
+            <TextView
+                android:id="@+id/item_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/item_rating"
+                android:layout_margin="8dp"
+                android:layout_marginHorizontal="8dp"
+                android:background="@drawable/tag_roundedshape"
+                android:fontFamily="@font/avertastd_bold"
+                android:text="tag"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="@+id/item_rating" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
