Modification du programme entier pour rajouter un repositories, progressBar pour le chargement , textView pour afficher les erreurs

--- a/app/src/main/res/layout/activity_show_dest_web_view.xml
+++ b/app/src/main/res/layout/activity_show_dest_web_view.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/evaneos_green"
-            app:title="Destination Name"
             app:titleTextColor="@color/white" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -31,5 +30,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AppBar_Webview" />
+
+    <ProgressBar
+        android:id="@+id/wv_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/AppBar_Webview" />
+
+    <TextView
+        android:id="@+id/erreurWV"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="200dp"
+        android:gravity="center"
+        android:text="erreur"
+        android:textSize="30sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/AppBar_Webview" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
