--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/DestinationBar"
-        android:visibility="gone">
+        android:visibility="visible">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -45,7 +45,9 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="30sp"
-        android:visibility="visible"
+        android:layout_marginBottom="200dp"
+        android:text="erreur"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,11 +60,25 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/DestinationBar" />
+
+    <Button
+        android:id="@+id/refresh_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:gravity="center"
+        android:text="Refresh"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/erreurTv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/DestinationBar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
