--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -6,7 +6,12 @@
     android:id="@+id/card_view"
     android:layout_margin="16dp"
     card_view:cardCornerRadius="20dp"
-    card_view:cardElevation="4dp">
+    android:background="@color/black"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:elevation="4dp"
+    card_view:cardElevation="10dp"
+    card_view:cardPreventCornerOverlap="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -61,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/item_rating"
                 android:background="@drawable/tag_roundedshape"
+                android:layout_marginHorizontal="8dp"
                 android:fontFamily="@font/avertastd_bold"
                 android:text="tag"
                 android:textColor="@color/white"
