--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -12,11 +12,6 @@
     android:elevation="4dp"
     card_view:cardElevation="10dp"
     card_view:cardPreventCornerOverlap="false">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="match_parent"
@@ -39,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:fontFamily="@font/avertastd_extrabold"
-                android:text="Destination"
+                android:text="@string/recyclerview_destination_name"
                 android:textColor="@color/white"
                 android:textSize="38sp"
                 android:textStyle="bold"
@@ -68,12 +63,11 @@
                 android:background="@drawable/tag_roundedshape"
                 android:layout_marginHorizontal="8dp"
                 android:fontFamily="@font/avertastd_bold"
-                android:text="tag"
+                android:text="@string/recyclerview_tag"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toBottomOf="@+id/item_rating" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
