-changement des android: en tools: dans les layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/WebView_Toolbar"
+            android:id="@+id/mainactivity_Toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/evaneos_green"
@@ -46,7 +46,7 @@
         android:gravity="center"
         android:textSize="30sp"
         android:layout_marginBottom="200dp"
-        android:text="@string/main_activity_error_text"
+        tools:text="@string/main_activity_error_text"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         android:gravity="center"
-        android:text="@string/main_activity_refresh_button"
+        tools:text="@string/main_activity_refresh_button"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/erreurTv"
         app:layout_constraintEnd_toEndOf="parent"
