--- a/app/src/main/res/layout/activity_show_dest_web_view.xml
+++ b/app/src/main/res/layout/activity_show_dest_web_view.xml
@@ -50,7 +50,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="200dp"
         android:gravity="center"
-        android:text="@string/dest_webview_activity_error_text"
+        tools:text="@string/dest_webview_activity_error_text"
         android:textSize="30sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
