--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="280dp"
     android:id="@+id/card_view"
@@ -34,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:fontFamily="@font/avertastd_extrabold"
-                android:text="@string/recyclerview_destination_name"
+                tools:text="@string/recyclerview_destination_name"
                 android:textColor="@color/white"
                 android:textSize="38sp"
                 android:textStyle="bold"
@@ -63,7 +64,7 @@
                 android:background="@drawable/tag_roundedshape"
                 android:layout_marginHorizontal="8dp"
                 android:fontFamily="@font/avertastd_bold"
-                android:text="@string/recyclerview_tag"
+                tools:text="@string/recyclerview_tag"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
