--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         android:gravity="center"
-        tools:text="@string/main_activity_refresh_button"
+        android:text="@string/main_activity_refresh_button"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/erreurTv"
         app:layout_constraintEnd_toEndOf="parent"
