--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="280dp"
-    android:id="@+id/card_view"
-    android:layout_margin="16dp"
-    card_view:cardCornerRadius="20dp"
-    android:background="@color/black"
-    android:clipChildren="false"
-    android:clipToPadding="false"
-    android:elevation="4dp"
-    card_view:cardElevation="10dp"
-    card_view:cardPreventCornerOverlap="false">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="destination"
+            type="com.evaneos.data.model.Destination" />
+
+        <variable
+            name="handlers"
+            type="com.evaneos.evaneostest.viewmodels.MainActivityViewModel" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_margin="16dp"
+        android:background="@color/black"
+        android:clickable="true"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:elevation="4dp"
+        android:focusable="true"
+        card_view:cardCornerRadius="20dp"
+        card_view:cardElevation="10dp"
+        card_view:cardPreventCornerOverlap="false">
+
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="match_parent"
@@ -35,14 +51,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:fontFamily="@font/avertastd_extrabold"
-                tools:text="@string/recyclerview_destination_name"
                 android:textColor="@color/white"
                 android:textSize="38sp"
                 android:textStyle="bold"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent"
-                card_view:layout_constraintVertical_bias="0.639" />
+                card_view:layout_constraintVertical_bias="0.639"
+                tools:text="@string/recyclerview_destination_name" />
 
             <com.grdk.ratingbarsvg.RatingBarSvg
                 android:id="@+id/item_rating"
@@ -61,14 +77,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/item_rating"
-                android:background="@drawable/tag_roundedshape"
                 android:layout_marginHorizontal="8dp"
+                android:background="@drawable/tag_roundedshape"
                 android:fontFamily="@font/avertastd_bold"
-                tools:text="@string/recyclerview_tag"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/item_rating" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+                card_view:layout_constraintTop_toBottomOf="@+id/item_rating"
+                tools:text="@string/recyclerview_tag" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</layout>
