--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -27,6 +27,7 @@
         android:focusable="true"
         card_view:cardCornerRadius="20dp"
         card_view:cardElevation="10dp"
+        android:onClick="@{() -> handlers.itemClick()}"
         card_view:cardPreventCornerOverlap="false">
 
         <ImageView
