--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -20,6 +20,7 @@
         android:layout_height="280dp"
         android:layout_margin="16dp"
         android:background="@color/black"
+        android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:clipChildren="false"
         android:clipToPadding="false"
