Correction du programme

--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewmodel"
-            type="com.evaneos.evaneostest.viewmodel.ItemDestinationViewModel" />
+            type="com.evaneos.evaneostest.ui.viewmodel.ItemDestinationViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
