--- a/app/src/main/res/layout/main_activity_list_destination.xml
+++ b/app/src/main/res/layout/main_activity_list_destination.xml
@@ -22,7 +22,7 @@
         android:clickable="true"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:onClick="@{viewmodel::onItemClick}"
+        android:onClick="@{()->viewmodel.onItemClick()}"
         android:elevation="4dp"
         android:focusable="true"
         card_view:cardCornerRadius="20dp"
